Minor updates - Index, links, resume?

--- a/about.Rmd
+++ b/about.Rmd
@@ -27,9 +27,9 @@ Below are examples of some of the arts-related projects that have developed skil
 <td valign="top">
 ### Leadership and Strategic Planning
 
-- As Lead Co-Artistic Director of Wangaratta Festival of Jazz & Blues (2017-19), I established a partnership with Amersfoort Jazz Festival and the World Jazz Network, which led to export/showcase opportunities for Australian artists
-- Invited member of Ballarat Live Music Advisory Committee (2016)
-- Alumni of Australia Council Arts Leader Program (2017-18)
+- As Lead Co-Artistic Director of Wangaratta Festival of Jazz & Blues (2017-19), I established a partnership with Amersfoort Jazz Festival and the World Jazz Network, which led to export/showcase opportunities for Australian artists.
+- Invited member of Ballarat Live Music Advisory Committee (2016).
+- Alumni of Australia Council Arts Leader Program (2017-18).
 - I have led professional and community ensembles, such as the one-off [Spiderbait and the Wangaratta Horns of Death](https://fb.watch/lv-oPf-qyM/){target="_blank} featuring more than 60 musicians aged 10-70.
 
 </td>
@@ -38,10 +38,10 @@ Below are examples of some of the arts-related projects that have developed skil
 <td valign="top">
 ### Project Management
 
-- Founded, directed, promoted Festival of Slow Music, a nine-day festival in Ballarat to stimulate artistic and business activity (2013-15)
-- 100:25:1 - I coordinated, promoted, performed and recorded 100 duets in one month, and conducted research for social network analysis 
-- Recorded, released and promoted 26 albums - most under my own Fat Rain music label, distributed on Bandcamp, Spotify and Apple Music
-- Tour management for international artists visiting Australia, coordinating major festival participation, travel logistics and promotion
+- Founded, directed, promoted Festival of Slow Music, a nine-day festival in Ballarat to stimulate artistic and business activity (2013-15).
+- 100:25:1 - I coordinated, promoted, performed and recorded 100 duets in one month, and conducted research for social network analysis.
+- Recorded, released and promoted 26 albums - most under my own Fat Rain music label, distributed on Bandcamp, Spotify and Apple Music.
+- Tour management for international artists visiting Australia, coordinating major festival participation, travel logistics and promotion.
 
 
 </td>
@@ -79,10 +79,10 @@ Below are examples of some of the arts-related projects that have developed skil
 <td valign="top">
 ### Communication
 
-- Co-founder and Editor of Dingo, a bi-annual 116pp magazine celebrating Australian jazz, now in its 5th edition.
-- Coordinated marketing campaigns including for Festival of Slow Music, Melbourne Jazz Fringe Festival and album releases
-- Regularly interviewed for radio and press for event/product promotion
-- Teaching group and individual lessons/workshops from primary to masters level in instrumental and music-business skills at institutions such as University of Melbourne, Melbourne Polytechnic, Blackburn High School
+- Co-founder and Editor of Dingo, a bi-annual 116pp magazine celebrating Australian jazz, producing 10 editions.
+- Coordinated marketing campaigns including for Festival of Slow Music, Melbourne Jazz Fringe Festival and album releases.
+- Regularly interviewed for radio and press for event/product promotion.
+- Teaching group and individual lessons/workshops from primary to masters level in instrumental and music-business skills at institutions such as University of Melbourne, Melbourne Polytechnic, Blackburn High School.
 
 
 
