--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ title: "Welcome"
 
 I've always been into numbers, technology and problem-solving, whether in bookkeeping, grant writing, social network research, music, sculpture or arts administration. 
 
-Examples of data analysis in my musical exploits include 2015's _100:25:1_ project involving social network analysis, as well as in my research and advocacy for the Australian jazz scene at state and federal levels. Since 2021, I've developed technical data skills in Python, R, SQL, Tableau, Power BI, Neo4j and Excel, working in major professional service consultancies, GHD and KPMG, as well as project-based work for The Music Place, Celsius Design and University of Melbourne research.
+Examples of data analysis in my musical exploits include 2015's _100:25:1_ project involving social network analysis, as well as in my research and advocacy for the Australian jazz scene at state and federal levels. Since undertaking further study through the Victorian Digital Jobs Program and at RMIT, I've developed presentation and technical data skills in Power BI, Python, R, SQL, Tableau, Neo4j and Excel, working in major professional service consultancies, GHD and KPMG, as well as project-based work for The Music Place, Celsius Design and University of Melbourne research.
 
 Here you'll find examples of my projects:
 
